# rust-basehangul

./: Cargo.toml  README.md  index.html  search-index.js
basehangul/: fn.decode.html  fn.encode.html  index.html  sidebar-items.js  stability.html  stability.json  struct.Decoder.html  struct.Encoder.html  struct.Packer.html  struct.Unpacker.html  type.DecodeResult.html
encoding_index_korean/: index.html
encoding_index_korean/euc_kr/: fn.backward.html  fn.forward.html  index.html
implementors/core/iter/: trait.Iterator.js
src/: lib.rs
src/basehangul/: lib.rs.html
src/encoding_index_korean/: euc_kr.rs.html  lib.rs.html
src/encoding_index_tests/: index_tests.rs.html
