[package]
name = "basehangul"
version = "0.1.3"
authors = ["Kang Seonghoon <public+rust@mearie.org>"]

description = "An implementation of BaseHangul binary-to-text format in Rust"
homepage = "https://github.com/lifthrasiir/rust-basehangul"
documentation = "https://lifthrasiir.github.io/rust-basehangul/basehangul"
repository = "https://github.com/lifthrasiir/rust-basehangul"
keywords = ["encoding"]
readme = "README.md"
license = "CC0-1.0"

[lib]
name = "basehangul"

[dependencies]
encoding-index-korean = "= 1.2.20141220"
